<resources>
    <string name="app_name">Ticket Assistant</string>
    <string name="title_home">Home</string>
    <string name="title_order">Order</string>
    <string name="title_my">My</string>
    <string name="query_ticket">Query Ticket</string>
    <string name="departure">Departure</string>
    <string name="destination">Destination</string>
    <string name="departure_time">Departure Time</string>
    <string name="future_order">待出行订单</string>
    <string name="history_order">历史订单</string>
    <string name="seat0">商务座：有</string>
    <string name="seat1">一等座：有</string>
    <string name="seat2">二等座：有</string>
    <string name="submit_order">提交订单</string>
    <string name="depart_time_fomart"><b>出发时间：</b><i>%s</i></string>


    <string name="title_activity_settings">Settings</string>

    <string name="pre_personal">个人信息</string>
    <string name="prefer_login">登录</string>
    <string name="prefer_auth">人脸验证</string>
    <string name="prefer_phone_auth">手机校验</string>
    <string name="prefer_sercurity">我的保险</string>
    <string name="prefer_food">我的餐饮-特产</string>

    <string name="prefer_guide">出行向导</string>
    <string name="prefer_service">温馨服务</string>
    <string name="prefer_info">信息服务</string>

    <string name="prefer_notification">通知消息</string>
    <string name="prefer_aboubt">关于</string>
    <string name="key_login">key_login</string>
    <string name="refund_success">退票成功</string>
    <string name="refund_failed">退票失败,请检查网络状况</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="no_tickets">很抱歉，按照您的查询条件，未能找到列车</string>
    <string name="refund">退票</string>
    <string name="change">改签</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login_sign_in">登录/注册</string>
    <string name="username_empty">用户名不能为空</string>
    <string name="password_empty">用户密码不能为空</string>

    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
