<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.yly.trainsystem.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.yly.trainsystem.ui.order.OrderFragment"
        android:label="@string/title_order"
        tools:layout="@layout/fragment_order" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.yly.trainsystem.ui.my.MyFragment"
        android:label="@string/title_my"
        tools:layout="@layout/fragment_my" />
</navigation>
