<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="ticket"
            type="com.yly.trainsystem.ui.tickets.TicketViewModel" />

        <variable
            name="listener"
            type="android.view.View.OnClickListener" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/list_item_margin"
        android:paddingLeft="@dimen/list_item_margin"
        android:paddingRight="@dimen/list_item_margin"
        android:background="@drawable/item_shape"
        app:setOnClickListener="@{listener}"
        >

        <TextView
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.7"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/divider"
            >

            <TextView
                android:id="@+id/trainName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{ticket.trainName}"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="@dimen/list_item_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/departure"
                app:layout_constraintHorizontal_bias="0.12" />

            <TextView
                android:id="@+id/departure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/departure"
                android:text="@{ticket.departure}"
                android:textSize="@dimen/list_item_text_size"
                app:layout_constraintStart_toEndOf="@id/trainName"
                app:layout_constraintEnd_toStartOf="@+id/direction"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.5"           />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/seat_size"
                android:text="@{ticket.departureTime}"
                android:textColor="@android:color/holo_blue_light"
                app:layout_constraintTop_toBottomOf="@id/departure"
                app:layout_constraintStart_toStartOf="@id/departure"
                app:layout_constraintEnd_toEndOf="@id/direction"
                android:gravity="center"
                />

            <ImageView
                android:id="@+id/direction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/list_item_text_size"
                app:layout_constraintStart_toEndOf="@+id/departure"
                app:layout_constraintEnd_toStartOf="@+id/destination"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:srcCompat="@drawable/icon_direction" />

            <TextView
                android:id="@+id/destination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/list_item_text_size"
                android:text="@{ticket.destination}"
                android:drawableStart="@drawable/destination"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toEndOf="@+id/direction"
                app:layout_constraintEnd_toEndOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_gravity="center"
                android:text="@string/seat0"
                android:textSize="@dimen/seat_size"
                tools:layout_editor_absoluteY="149dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/seat1"
                android:layout_gravity="center"
                android:textSize="@dimen/seat_size"
                />

            <TextView
                android:id="@+id/textView6"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/seat2"
                android:layout_gravity="center"
                android:textSize="@dimen/seat_size" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>